--- a/source/_posts/树莓派个人网盘搭建.md
+++ b/source/_posts/树莓派个人网盘搭建.md
@@ -7,7 +7,7 @@ title: 树莓派4个人网盘搭建
 -   [前期准备工作](#前期准备工作)
     -   [树莓派购买](#树莓派购买)
     -   [下载树莓派镜像](#下载树莓派镜像)
-    -   [配置树莓派网络连接(可选)](#配置树莓派网络连接可选)
+    -   [配置树莓派网络连接](#配置树莓派网络连接)
     -   [启动树莓派](#启动树莓派)
 -   [域名购买](#域名购买)
 -   [域名解析](#域名解析)
@@ -19,24 +19,24 @@ title: 树莓派4个人网盘搭建
     -   [使用 DNSPod API 申请证书](#使用-dnspod-api-申请证书)
     -   [安装证书](#安装证书)
     -   [修改权限](#修改权限)
--   [挂载移动硬盘(可选)](#挂载移动硬盘可选)
+-   [挂载移动硬盘](#挂载移动硬盘)
 -   [配置 aria2](#配置-aria2)
     -   [aria2 简介](#aria2-简介)
     -   [aria2 安装](#aria2-安装)
     -   [aria2 配置](#aria2-配置)
     -   [设置 aria2 开机启动](#设置-aria2-开机启动)
--   [配置 nginx(可选)](#配置-nginx可选)
+-   [配置 nginx](#配置-nginx)
     -   [添加 nginx 服务用户到
         certusers](#添加-nginx-服务用户到-certusers)
     -   [关闭默认虚拟主机](#关闭默认虚拟主机)
     -   [根据域名配置虚拟主机](#根据域名配置虚拟主机)
--   [配置 Aria2 WebUI(可选)](#配置-aria2-webui可选)
+-   [配置 Aria2 WebUI](#配置-aria2-webui)
     -   [设置 webui-aria2 页面](#设置-webui-aria2-页面)
 -   [配置 cloudreve](#配置-cloudreve)
     -   [安装 cloudreve](#安装-cloudreve)
 -   [更新证书时自动将服务重启](#更新证书时自动将服务重启)
     -   [配置重新加载 web 服务](#配置重新加载-web-服务)
--   [配置 samba 服务(可选)](#配置-samba-服务可选)
+-   [配置 samba 服务](#配置-samba-服务)
     -   [配置 samba 服务共享文件目录](#配置-samba-服务共享文件目录)
     -   [访问 samba 服务](#访问-samba-服务)
 -   [后记](#后记)
@@ -97,7 +97,7 @@ micro HDMI 线、SD 读卡器、散热器、网线、移动硬盘等其他配件
 
 ![](./pi_imager5.png)
 
-#### 配置树莓派网络连接(可选)
+#### 配置树莓派网络连接
 
 如果你选择通过网线直接将树莓派连接到路由器，可跳过本章节，如果使用无线网络连接，则按以下步骤进行配置。
 
@@ -347,7 +347,7 @@ exit
 
 注意申请的证书只有三个月期限，acme.sh 脚本会在证书到期之前自动更新证书，但是因为 aria2 与 cloudreve 都用到证书，因此在 acme.sh 更新证书的同时需要将 aria2 与 cloudreve 服务重新拉起，后文提到怎么使用 acme.sh 的 --reloadcmd 选项做到这一点。
 
-### 挂载移动硬盘(可选)
+### 挂载移动硬盘
 
 个人在树莓派挂载 2T 2.5寸的移动硬盘，可按实际(消费能力)需求购买移动硬盘或者硬盘柜，注意树莓派4供电能力不算特别强，挂载两块以上的移动硬盘最好使用 USB 集线器单独供电。
 
@@ -698,7 +698,7 @@ sudo systemctl status aria2cd.service
 sudo journalctl -f -u aria2cd.service
 ```
 
-### 配置 nginx(可选)
+### 配置 nginx
 
 aria2c 是一个后台程序，为了使用可视化的 web 页面操作 aria2c，可以配置 aria2c 前端界面，在配置前端界面之前，需要先安装 nginx，cloudreve 的离线下载功能提供操作 aria2c 界面，如果仅使用 cloudreve 操作 aria2c，可跳过本节内容。
 
@@ -824,7 +824,7 @@ sudo systemctl status nginx
 curl -L https://example.top:5001
 ```
 
-### 配置 Aria2 WebUI(可选)
+### 配置 Aria2 WebUI
 
 为了使用可视化的 web 页面操作 aria2，可使用 [webui-aria2](https://github.com/ziahamza/webui-aria2) 配合 nginx 管理 aria2。首先将 webui-aria2 项目下载：
 
@@ -1173,7 +1173,7 @@ acme.sh --install-cert -d example.top --key-file /etc/letsencrypt/live/private.k
 
 再次说明安装证书命令只需要执行一般即可，acme.sh 会自动记录使用的命令，并且在下一次自动更新证书时自动执行。
 
-### 配置 samba 服务(可选)
+### 配置 samba 服务
 
 无论是通过 aria2 web 页面下载视频或者还是通过 cloudreve 离线下载功能下载视频，视频文件都会保存到树莓派的移动硬盘上。如果是通过 cloudreve 离线下载，则可以通过浏览器观看。但是对于 H.265 编码，部分浏览器可能不支持编码，个人实测下来，AMD 锐龙的 win10 系统无法通过浏览器在线观看 H.265 编码视频(在 cloudreve web 页面)，但是英特尔的笔记本是可以的，怀疑跟平台有关。另外如果视频没有字幕，这是时候需要外挂字幕，则浏览器无能为力。
 
@@ -1235,7 +1235,7 @@ sudo systemctl restart smbd.service
 
 ### 后记
 
-十分感谢耐心看完本文。当初自己买树莓派时，就想存粹搭个广告过滤的 dns 服务，没想到想要搭建个人网盘以及"家庭影院"(家里没矿买不起索尼电视机)，后续更新台式机的 2K 显示器之后，就想着找些经典电影(2K以上分辨率)回味，后续自己慢慢摸索搭建出这一套服务，相比于 7x24 小时开机的台式机，我更倾向于使用树莓派(功耗不是一个数量级)，而且树莓派可玩性远远不仅以此。搭建完毕之后，为了以后可能需要再次用到(升级树莓派)，就有了本文，希望能帮得到你。
+十分感谢耐心看完本文。当初自己买树莓派时，就想纯粹搭个广告过滤的 dns 服务，没想到想要搭建个人网盘以及"家庭影院"(家里没矿买不起索尼电视机)，后续更新台式机的 2K 显示器之后，就想着找些经典电影(2K以上分辨率)回味，后续自己慢慢摸索搭建出这一套服务，相比于 7x24 小时开机的台式机，我更倾向于使用树莓派(功耗不是一个数量级)，而且树莓派可玩性远远不仅以此。搭建完毕之后，为了以后可能需要再次用到(升级树莓派)，就有了本文，希望能帮得到你。
 
 ### 参考链接
 
