--- a/source/_posts/树莓派个人网盘搭建.md
+++ b/source/_posts/树莓派个人网盘搭建.md
@@ -14,9 +14,8 @@ title: 树莓派4个人网盘搭建
 -   [创建服务账户](#创建服务账户)
 -   [配置证书](#配置证书)
     -   [创建证书文件夹](#创建证书文件夹)
-    -   [安装 acme.sh 自动管理 CA
-        证书脚本](#安装-acme.sh-自动管理-ca-证书脚本)
-    -   [使用 DNSPod API 申请证书](#使用-dnspod-api-申请证书)
+    -   [安装自动管理 CA 证书脚本](#安装自动管理-CA-证书脚本) 
+    -   [使用 DNSPod API 申请证书](#使用-DNSPod-API-申请证书)
     -   [安装证书](#安装证书)
     -   [修改权限](#修改权限)
 -   [挂载移动硬盘](#挂载移动硬盘)
@@ -26,8 +25,7 @@ title: 树莓派4个人网盘搭建
     -   [aria2 配置](#aria2-配置)
     -   [设置 aria2 开机启动](#设置-aria2-开机启动)
 -   [配置 nginx](#配置-nginx)
-    -   [添加 nginx 服务用户到
-        certusers](#添加-nginx-服务用户到-certusers)
+    -   [添加 nginx 服务用户到 certusers](#添加-nginx-服务用户到-certusers)
     -   [关闭默认虚拟主机](#关闭默认虚拟主机)
     -   [根据域名配置虚拟主机](#根据域名配置虚拟主机)
 -   [配置 Aria2 WebUI](#配置-aria2-webui)
@@ -288,7 +286,7 @@ sudo mkdir -p /etc/letsencrypt/live
 sudo chown -R acme:acme /etc/letsencrypt/live
 ```
 
-#### 安装 acme.sh 自动管理 CA 证书脚本
+#### 安装自动管理 CA 证书脚本
 
 分别执行如下命令，注意看是否报错。第一条命令切换到用户 acme。第二条命令安装 acme.sh。第三条命令退出当前用户。第四条命令再次切换到用户 acme。注意到这里两次切换用户的操作不能省略，因为安装完 acme.sh 之后要重新登录当前用户，否则无法识别出 acme.sh 命令。
 
