--- a/source/_posts/树莓派个人网盘搭建.md
+++ b/source/_posts/树莓派个人网盘搭建.md
@@ -2,8 +2,45 @@
 title: 树莓派4个人网盘搭建
 ---
 
-<br/>
-<br/>
+-   [前言](#前言)
+-   [前提条件](#前提条件)
+-   [前期准备工作](#前期准备工作)
+    -   [树莓派购买](#树莓派购买)
+    -   [下载树莓派镜像](#下载树莓派镜像)
+    -   [配置树莓派网络连接(可选)](#配置树莓派网络连接可选)
+    -   [启动树莓派](#启动树莓派)
+-   [域名购买](#域名购买)
+-   [域名解析](#域名解析)
+-   [创建服务账户](#创建服务账户)
+-   [配置证书](#配置证书)
+    -   [创建证书文件夹](#创建证书文件夹)
+    -   [安装 acme.sh 自动管理 CA
+        证书脚本](#安装-acme.sh-自动管理-ca-证书脚本)
+    -   [使用 DNSPod API 申请证书](#使用-dnspod-api-申请证书)
+    -   [安装证书](#安装证书)
+    -   [修改权限](#修改权限)
+-   [挂载移动硬盘(可选)](#挂载移动硬盘可选)
+-   [配置 aria2](#配置-aria2)
+    -   [aria2 简介](#aria2-简介)
+    -   [aria2 安装](#aria2-安装)
+    -   [aria2 配置](#aria2-配置)
+    -   [设置 aria2 开机启动](#设置-aria2-开机启动)
+-   [配置 nginx(可选)](#配置-nginx可选)
+    -   [添加 nginx 服务用户到
+        certusers](#添加-nginx-服务用户到-certusers)
+    -   [关闭默认虚拟主机](#关闭默认虚拟主机)
+    -   [根据域名配置虚拟主机](#根据域名配置虚拟主机)
+-   [配置 Aria2 WebUI(可选)](#配置-aria2-webui可选)
+    -   [设置 webui-aria2 页面](#设置-webui-aria2-页面)
+-   [配置 cloudreve](#配置-cloudreve)
+    -   [安装 cloudreve](#安装-cloudreve)
+-   [更新证书时自动将服务重启](#更新证书时自动将服务重启)
+    -   [配置重新加载 web 服务](#配置重新加载-web-服务)
+-   [配置 samba 服务(可选)](#配置-samba-服务可选)
+    -   [配置 samba 服务共享文件目录](#配置-samba-服务共享文件目录)
+    -   [访问 samba 服务](#访问-samba-服务)
+-   [后记](#后记)
+-   [参考链接](#参考链接)
 
 ### 前言
 
