--- a/source/_posts/树莓派个人网盘搭建.md
+++ b/source/_posts/树莓派个人网盘搭建.md
@@ -391,7 +391,7 @@ mkfs.xfs  /dev/sda1
 然后在根目录创建文件用于挂载磁盘，比如在 /media/ 目录下创建 data 目录并且将 data 目录修改为 777：
 
 ```bash
-sudo mkdir mkdir
+sudo mkdir /media/data
 sudo chmod 777 /media/data
 ```
 
@@ -1202,7 +1202,7 @@ acme.sh --install-cert -d example.top --key-file /etc/letsencrypt/live/private.k
 将 /etc/samba/smb.conf 文件保存之后，需要设置 samba 用户密码(注意到 /media/data/cloudreve_home 与 /media/data/aria2_data 的所有权根据前文已经设定为 web-server 用户，如果不是请自行替换成实际用户名)：
 
 ```bash
-sudo smbpasswd web-server
+sudo smbpasswd -a web-server
 ```
 
 输入两部密码即可，然后重启 samba 服务：
